--- a/package.json
+++ b/package.json
@@ -1,13 +1,11 @@
 {
   "name": "backend-mercado-autonomo",
-  "version": "1.0.0",
-  "description": "## Introdução",
-  "main": "index.js",
   "scripts": {
+    "dev": "ts-node-dev --respawn --transpile-only src/app.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
-    "type": "module",
+    "type": "git",
     "url": "git+https://github.com/Kenzie-Academy-Brasil-Developers/backend-mercado-autonomo.git"
   },
   "keywords": [],
@@ -21,7 +19,8 @@
     "express": "^4.18.2"
   },
   "devDependencies": {
-    "typescript": "^5.0.4",
-    "@types/express": "^4.17.17"
+    "@types/express": "^4.17.17",
+    "ts-node-dev": "^2.0.0",
+    "typescript": "^5.2.2"
   }
 }
